--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,11 @@ flutter:
   assets:
   - assets/tiles/
   - assets/images/HUD/
-  - assets/images/Terrain/
   - assets/images/Background/
   - assets/images/Items/Fruits/
+  - assets/images/Terrain/
+  - assets/images/Traps/Saw/
+  - assets/images/Main Characters/
   - assets/images/Main Characters/Mask Dude/
   - assets/images/Main Characters/Ninja Frog/
   - assets/images/Main Characters/Pink Man/
