--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/audio/
+  - assets/audio/music/
   - assets/tiles/
   - assets/images/HUD/
   - assets/images/Background/
