--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   - assets/images/Main Characters/Pink Man/
   - assets/images/Main Characters/Virtual Guy/
   - assets/images/Enemies/Chicken/
+  - assets/images/Enemies/Rhino/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
