--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flame: ^1.8.2
   flame_tiled: ^1.13.0
   flame_audio: ^2.0.5
+  just_audio: ^0.9.13
 
 dev_dependencies:
   flutter_test:
