--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.8.2
   flame_tiled: ^1.13.0
-  flame_audio: ^2.0.5
-  just_audio: ^0.9.13
+  just_audio: ^0.9.35
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +64,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/audio/
+  - assets/audio/collectFruit.wav
+  - assets/audio/disappear.wav
+  - assets/audio/hit.wav
+  - assets/audio/jump.wav
+  - assets/audio/jumpOffEnemy.wav
   - assets/audio/music/
+  - assets/audio/music/forest.mp3
+  - assets/audio/music/menu.mp3
   - assets/tiles/
   - assets/images/HUD/
   - assets/images/Background/
